surface, effectif dashboard update

--- a/dashboard_effectif.html
+++ b/dashboard_effectif.html
@@ -73,10 +73,10 @@
                 <div class="row">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page">CA</a>
+                            <a  class="nav-link" href="./dashbord.html">CA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./dashboard_effectif.html">Effectif</a>
+                            <a class="nav-link active" aria-current="page" >Effectif</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./dashboard_surface.html">Surface</a>
@@ -128,7 +128,7 @@
                     </div>
                     <script src="graph.js"></script>
 
-                    <canvas id="myChart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
+                    <canvas id="effectif_Chart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
 
                     <div class="card border shadow mb-4 ">
                         <div class="card-body d-flex justify-content-around flex-column">
