--- a/dashboard_surface.html
+++ b/dashboard_surface.html
@@ -73,13 +73,13 @@
                 <div class="row">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page">CA</a>
+                            <a  class="nav-link" href="./dashbord.html">CA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./dashboard_effectif.html">Effectif</a>
+                            <a class="nav-link" href="./dashboard_effectif.html" >Effectif</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./dashboard_surface.html">Surface</a>
+                            <a class="nav-link active" aria-current="page" >Surface</a>
                         </li>
                     </ul>
 
@@ -126,9 +126,9 @@
                                 50% réalisent un chiffre d'affaires supérieur à ce résultat.</p>
                         </div>
                     </div>
-                    <script src="graph.js"></script>
+                    <script src="graph_surface.js"></script>
 
-                    <canvas id="myChart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
+                    <canvas id="surface_Chart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
 
                     <div class="card border shadow mb-4 ">
                         <div class="card-body d-flex justify-content-around flex-column">
