une menace a ete detecte

--- a/dashboard_effectif.html
+++ b/dashboard_effectif.html
@@ -126,7 +126,7 @@
                                 50% réalisent un chiffre d'affaires supérieur à ce résultat.</p>
                         </div>
                     </div>
-                    <script src="graph.js"></script>
+                    <script src="graph_effectif.js"></script>
 
                     <canvas id="effectif_Chart" style="width:100%;max-width:600px;max-height: 300px;"></canvas>
 
@@ -165,11 +165,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script>
     <script src="selected_year.js"></script>
-    <script src="display_moyen_arrith.js" defer></script>
-    <script src="display_mode.js" defer></script>
-    <script src="display_mediane.js" defer></script>
-    <script src="display_ecart_type.js" defer></script>
-
+    
 
     </script>
 
