change the title of dashbord

--- a/dashbord.html
+++ b/dashbord.html
@@ -65,7 +65,7 @@
 
     <!--Container Main start-->
     <div class="bg-light d-flex justify-content-center flex-column align-items-center">
-        <h1 class="fw-bold">Liste des Magasins</h1>
+        <h1 class="fw-bold">Dashboard</h1>
         <div style="width: 90%" class="d-flex justify-content-center flex-column align-items-center gap-4">
             <div class="container">
                 <!--ADD your content-->
