--- a/ajouter.html
+++ b/ajouter.html
@@ -98,8 +98,8 @@
            </div>
          </div>
          <div class="row">
-           <div class="col-sm-10">
-             <button type="submit" class="btn btn-primary">Submit</button>
+           <div class=" d-flex justify-content-md-end ">
+             <button type="submit" class="btn btn-primary flex-grow-1 flex-md-grow-0">Submit</button>
            </div>
          </div>
       </form>
